[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linux-codesign-toolkit"
version = "2.0.0"
description = "Modern API-driven code signing toolkit for Windows, Java, AIR, and Apple packages"
authors = [{name = "Ryan Coleman", email = "coleman.ryan@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "sqlalchemy>=2.0.23",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.1",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.25.2",
    "cryptography>=41.0.8",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
]

[project.scripts]
codesign-api = "codesign_api.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codesign_api"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]